Sun Feb 15 19:13:33 2004  Masatoshi SEKI  <m_seki@mva.biglobe.ne.jp>

	* lib/rinda/tuplespace.rb: read(tpl,0), raise RequestExpiredError
	  if not found.

Sun Feb 15 15:48:57 2004  Masaki Suketa  <masaki.suketa@nifty.ne.jp>

	* ext/win32ole/win32ole.c: add IDispatch wrapper in val2variant.
	  Thanks, arton.

Sun Feb 15 15:23:29 2004  Hirokazu Yamamoto  <ocean@m2.ccsnet.ne.jp>

	* ruby.h, dir.c (rb_glob): add const.

Sun Feb 15 01:46:05 2004  GOTOU Yuuzou  <gotoyuzo@notwork.org>

	* lib/mkmf.rb: absolute path of ruby is assigned to $(RUBY).
	  [ruby-dev:22870]

Sat Feb 14 23:59:11 2004  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* mkconfig.rb: use fileutils.rb instead of ftools.rb.

	* bcc32/Makefile.sub, win32/Makefile.sub (config.h): define
	  STACK_GROW_DIRECTION.

	* bcc32/Makefile.sub (config.h): add newer checks.

	* wince/Makefile.sub (config.h): define NEED_IO_SEEK_BETWEEN_RW.

Sat Feb 14 23:26:27 2004  WATANABE Hirofumi  <eban@ruby-lang.org>

	* lib/un.rb: use OptionParser instead of getopts.

Sat Feb 14 11:28:14 2004  Masatoshi SEKI  <m_seki@mva.biglobe.ne.jp>

	* sample/drb/*: import lib/drb/sample

Sat Feb 14 11:14:12 2004  Masatoshi SEKI  <m_seki@mva.biglobe.ne.jp>

	* lib/drb/drb.rb: add pretty_print, thanks gotoken.

Fri Feb 13 21:51:00 2004  Gavin Sinclair <gsinclair@soyabean.com.au>

	* lib/fileutils.rb: slighly improved documentation (sync with 1.8)

Fri Feb 13 19:57:01 2004  Kouhei Sutou  <kou@cozmixng.org>

	* test/rss/test_trackback.rb: added tests for TrackBack with RSS
	  2.0.

	* test/rss/common.rb: added methods make RSS 2.0.

	* lib/rss/trackback.rb: TrackBack API is decided.

	* lib/rss/rss.rb: RSS::VERSION 0.0.7 -> 0.0.8.

	* lib/rss/parser.rb, lib/rss/rss.rb: replaced $DEBUG by RSS::DEBUG.

	* lib/rss/2.0.rb: removed RSS 2.0 URI. Because RSS 2.0 doesn't
	  have URI.

Fri Feb 13 14:41:00 2004  Hidetoshi NAGAI  <nagai@ai.kyutech.ac.jp>

	* ext/tk/lib/tk.rb: en-bugged at last commit (Feb 11 23:24:22 2004)
